--- a/apps/NxPlayerBasedFilter/res/layout/activity_player.xml
+++ b/apps/NxPlayerBasedFilter/res/layout/activity_player.xml
@@ -32,4 +32,16 @@
         android:layout_marginBottom="135dp" >
     </MediaController>
     
+   	<TextView
+   	    android:id="@+id/textView1"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="match_parent"
+   	    android:gravity="center" />
+   	
+   	<TextView
+   	    android:id="@+id/textView2"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="match_parent"
+   	    android:gravity="center_vertical" />
+   	
 </RelativeLayout>
